--- a/po/zh_CN/ftpd.po
+++ b/po/zh_CN/ftpd.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ftpd pro v3.0.0\n"
 "Report-Msgid-Bugs-To: pigman46@gmail.com\n"
 "POT-Creation-Date: 2020-06-03 22:57-0500\n"
-"PO-Revision-Date: 2020-08-20 13:18+0800\n"
+"PO-Revision-Date: 2020-08-21 20:27+0800\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -85,7 +85,7 @@ msgstr "菜单"
 #. TRANSLATORS: \xee\x80\x83 (Y button)
 #: /home/mtheall/workspace/switch/ftpd/source/ftpServer.cpp:344
 msgid "Menu "
-msgstr "菜单"
+msgstr "菜单 "
 
 #: /home/mtheall/workspace/switch/ftpd/source/ftpSession.cpp:1550
 #: /home/mtheall/workspace/switch/ftpd/source/ftpSession.cpp:1581
